--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+/* ------------- =General -------------- */
+
 @-moz-viewport { width: device-width; scale: 1; }
 @-ms-viewport { width: device-width; scale: 1; }
 @-o-viewport { width: device-width; scale: 1; }
@@ -10,9 +12,133 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
-  font: normal 100%/1.3 "Roboto" sans-serif;
+  font: normal 100%/1.3 Roboto, sans-serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+/* ------------- =header -------------- */
+
+h1 {
+  font-family: "Abril Fatface", serif;
+  margin: 0 0 .5rem;
+  font-size: 2rem;
+}
+
+header {
+  padding: .5rem 0;
+  background-color: #ccc;
+  text-align: center;
+  padding-bottom: .75rem;
+}
+
+/* ------------- =navigation -------------- */
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  font-weight: bold;
+}
+
+nav li {
+  text-align: left;
+}
+
+nav a {
+  display: block;
+  padding: .5em 1em;
+  color: #333;
+  text-decoration: none;
+}
+
+nav a:hover {
+  background-color: #333;
+  color: #fff;
+}
+
+/* ------------- =Featured Products -------------- */
+
+h2 {
+  font-size: 1.5rem;
+  text-align: center;
+  font-family: "Abril Fatface", serif;
+  background-color: #000;
+  color: #e2e2e2;
+  margin: 0;
+  padding: 1rem 0;
+}
+
+p {
+  margin-top: .75em;
+  font-size: .75rem;
+}
+
+h3 {
+  font-size: .875rem;
+  font-weight: bold;
+  margin: 0;
+  padding: .75rem 0;
+}
+
+img {
+  display: block;
+  width: 90%;
+  max-width: 120px;
+}
+
+.image {
+  width: 100%;
+  margin: 0 auto 1.5rem;
+}
+
+.btn {
+  display: inline-block;
+  text-decoration: none;
+  padding: .4em .75em .3em;
+  list-style-type: none;
+  text-align: center;
+  border-width: 3px;
+  border-style: solid;
+  border-color: #333;
+  border-radius: 8px;
+  background-color: #333;
+  color: #fff;
+  font-size: 1.125rem;
+}
+
+.btn:hover {
+  background-color: #000;
+  border-color: #000;
+}
+
+.btn-small {
+  font-size: .875rem;
+}
+
+div {
+  display: inline-block;
+  float: left;
+  width: 33.3333%;
+  padding: 1.5rem;
+  border-left: 1px solid black;
+  min-height: 35em;
+}
+
+.first {
+  background-color: #e2e2e2;
+}
+
+.second {
+  background-color: #ccc;
+}
+
+.third {
+  background-color: #aaa;
 }
