--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ img {
 
 .image {
   width: 100%;
-  margin: 0 auto 1.5rem;
+  margin: 0 auto;
 }
 
 .btn {
@@ -128,11 +128,12 @@ div {
   width: 33.3333%;
   padding: 1.5rem;
   border-left: 1px solid black;
-  min-height: 35em;
+  min-height: 10em;
 }
 
 .first {
   background-color: #e2e2e2;
+  border-style: none;
 }
 
 .second {
