--- a/css/main.css
+++ b/css/main.css
@@ -104,8 +104,11 @@ header nav a:hover {
 
 /* ------------- =Featured Image-------------- */
 
-.featured-image img {
+.featured-image {
   position: relative;
+}
+
+.featured-image img {
   width: 100%;
   z-index: 1;
   display: block;
@@ -120,14 +123,21 @@ header nav a:hover {
 
 .featured-image div {
   position: absolute;
-  background-color: #fff;
+  background-color: rgba(255, 255,255, 0.8);
   border-style: solid;
   padding: .5rem;
   width: 90%;
   z-index: 2;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* ------------- =Featured Products -------------- */
+
+.featured-products {
+  overflow: hidden;
+}
 
 h4 {
   font-size: .875rem;
@@ -202,15 +212,200 @@ h4 {
 }
 
 .location img {
-  width: 80%;
-  margin: 1em;
+  width: 100%;
   display: block;
   margin: 0 auto;
 }
 
+.location p {
+  padding: 0 1em;
+  font-weight: bold;
+}
+
 /* ------------- =Contact -------------- */
 
-.contact img {
+.contact div {
+  background-color: #ccc;
+  text-align: center;
+}
+
+.contact-btn {
+  padding: 1em;
+  width: 100%;
+  margin: auto;
+  margin: 0 auto;
+  font-weight: bold;
+}
+
+.btn-ghost {
+  background-color: #fff;
+  color: #000;
+  border-color: #000;
+}
+
+.btn-ghost:hover {
+  background-color: #000;
+  border-color: #000;
+  color: #fff;
+}
+
+/* ------------- =Review -------------- */
+
+
+.review h3 {
+  margin-bottom: 1em;
+}
+
+.review {
+  background-color: #ccc;
+}
+
+.review div {
+  margin-bottom: 1em;
+}
+
+.card-body {
+  margin: .75em;
+}
+
+.card {
   display: block;
-  width: 20%;
+  margin: 1em;
+}
+
+.content h2 {
+  font-size: 1.5rem;
+  margin-bottom: .5rem;
+  font-weight: bold;
+}
+
+.card-body p {
+  text-align: left;
+  margin-top: 0;
+}
+
+.card-img img {
+  display: block;
+  margin: 0 auto;
+  width: 80px;
+  text-align: center;
+}
+
+.cards {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.cards li {
+  list-style-type: none;
+}
+
+@media only screen and (min-width: 25em) {
+
+/* ------------- =navigation -------------- */
+
+  nav li {
+    display: inline-block;
+    text-align: center;
+  }
+
+/* ------------- =about -------------- */
+
+  .about {
+    overflow: hidden;
+  }
+
+  .about p {
+    padding: 2em;
+    max-width: 45em;
+    float: left;
+  }
+
+  .about img {
+    float: none;
+    width: 200px;
+    padding: 0;
+    padding-top: 2em;
+    max-width: 200px;
+    display: block;
+    margin: 0 auto;
+  }
+
+/* ------------- =review -------------- */
+
+.card-img {
+    display: inline-block;
+    text-align: left;
+    margin: 0;
+    margin-right: 1em;
+    width: 80px;
+    vertical-align: top;
+  }
+
+.card-img img {
+  margin: 0;
+}
+
+.card h2 {
+  margin: 0;
+}
+
+.content {
+  display: inline-block;
+  text-align: left;
+  margin-top: 0;
+  width: 73%;
+  margin-left: 2rem;
+  vertical-align: top;
+  margin: 0;
+}
+
+.content div {
+  margin-left: 2rem;
+}
+
+}
+
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+
+/* ------------- =review -------------- */
+
+.card {
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    min-height: 27em;
+    padding-right: 0;
+  }
+
+.cards li {
+  display: inline-block;
+  width: 25%;
+}
+
+.card-img {
+  width: 25%;
+}
+
+.card-img img {
+  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:
+}
+
+.content {
+  width: 95%;
+}
+
 }
