--- a/css/main.css
+++ b/css/main.css
@@ -394,14 +394,8 @@ h4 {
 
 .card-img {
   width: 25%;
-}
-
-.card-img img {
   margin: 0 auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform:
+  display: block;
 }
 
 .content {
