--- a/css/main.css
+++ b/css/main.css
@@ -448,7 +448,13 @@ ul.cards {
 }
 
 .content {
-  width: 95%;
+  width: 100%;
+}
+
+.content h2{
+  text-align: left;
+}
+
 }
 
 @media only screen and (min-width: 60em) {
