--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ header nav a:hover {
 
 .featured-image div {
   position: absolute;
-  background-color: rgba(255, 255,255, 0.8);
+  background-color: rgba(255, 255, 255, 0.8);
   border-style: solid;
   padding: .5rem;
   width: 90%;
@@ -330,8 +330,8 @@ h4 {
   list-style-type: none;
 }
 
-
 /* ------------- =Footer -------------- */
+
 .footer {
   background-color: #aaa;
   color: #000;
@@ -344,15 +344,14 @@ h4 {
 }
 
 @media only screen and (min-width: 25em) {
-
-/* ------------- =navigation -------------- */
+  /* ------------- =navigation -------------- */
 
   nav li {
     display: inline-block;
     text-align: center;
   }
 
-/* ------------- =about -------------- */
+  /* ------------- =about -------------- */
 
   .about {
     overflow: hidden;
@@ -374,9 +373,9 @@ h4 {
     margin: 0 auto;
   }
 
-/* ------------- =review -------------- */
+  /* ------------- =review -------------- */
 
-.card-img {
+  .card-img {
     display: inline-block;
     text-align: left;
     margin: 0;
@@ -385,27 +384,27 @@ h4 {
     vertical-align: top;
   }
 
-.card-img img {
-  margin: 0;
-}
+  .card-img img {
+    margin: 0;
+  }
 
-.card h2 {
-  margin: 0;
-}
+  .card h2 {
+    margin: 0;
+  }
 
-.content {
-  display: inline-block;
-  text-align: left;
-  margin-top: 0;
-  width: 73%;
-  margin-left: 2rem;
-  vertical-align: top;
-  margin: 0;
-}
+  .content {
+    display: inline-block;
+    text-align: left;
+    margin-top: 0;
+    width: 73%;
+    margin-left: 2rem;
+    vertical-align: top;
+    margin: 0;
+  }
 
-.content div {
-  margin-left: 2rem;
-}
+  .content div {
+    margin-left: 2rem;
+  }
 
 }
 
@@ -416,44 +415,44 @@ h4 {
     line-height: 1.4;
   }
 
-/* ------------- =review -------------- */
+  /* ------------- =review -------------- */
 
-ul.cards {
-  margin: 1rem 0 1rem 1rem;
-}
+  ul.cards {
+    margin: 1rem 0 1rem 1rem;
+  }
 
-.card {
+  .card {
     display: inline-block;
     text-align: center;
     width: 100%;
     padding-right: 0;
   }
 
-.cards li {
-  display: inline-block;
-  float: left;
-  width: 33.3333%;
-  padding-right: 1rem;
-  margin: 0 auto;
-}
+  .cards li {
+    display: inline-block;
+    float: left;
+    width: 33.3333%;
+    padding-right: 1rem;
+    margin: 0 auto;
+  }
 
-.card-img {
-  width: 50%;
-  margin: 0 auto;
-  display: block;
-}
+  .card-img {
+    width: 50%;
+    margin: 0 auto;
+    display: block;
+  }
 
-.card-img img {
-  width: 100%;
-}
+  .card-img img {
+    width: 100%;
+  }
 
-.content {
-  width: 100%;
-}
+  .content {
+    width: 100%;
+  }
 
-.content h2{
-  text-align: left;
-}
+  .content h2{
+    text-align: left;
+  }
 
 }
 
@@ -464,7 +463,7 @@ ul.cards {
     line-height: 1.5;
   }
 
-/* ------------- =navigation -------------- */
+  /* ------------- =navigation -------------- */
 
   header {
     padding-left: 1rem;
@@ -482,14 +481,15 @@ ul.cards {
     margin-bottom: 0;
     padding-right: 2rem;
   }
-}
 
-/* ------------- =about -------------- */
+  /* ------------- =about -------------- */
 
-.about p {
-  float: none;
-  display: block;
-  margin: 0 auto;
+  .about p {
+    float: none;
+    display: block;
+    margin: 0 auto;
+  }
+
 }
 
 @media only screen and (min-width: 90em) {
