--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ body {
   margin: 0;
 }
 
-h3 {
+h2 {
   font-size: 1.5rem;
   text-align: center;
   font-family: "Abril Fatface", serif;
@@ -149,7 +149,7 @@ header nav a:hover {
   overflow: hidden;
 }
 
-h4 {
+h3 {
   font-size: .875rem;
   font-weight: bold;
   margin: 0;
@@ -297,7 +297,7 @@ h4 {
   margin: 1em;
 }
 
-.content h2 {
+.content p:nth-child(1) {
   font-size: 1.5rem;
   margin-bottom: .5rem;
   font-weight: bold;
@@ -384,7 +384,7 @@ h4 {
     margin: 0;
   }
 
-  .card h2 {
+  .card h4 {
     margin: 0;
   }
 
