--- a/css/main.css
+++ b/css/main.css
@@ -35,12 +35,24 @@ h2 {
 
 a {
   text-decoration: none;
-  color: #000;
   font-weight: bold;
+  color: #000;
+}
+
+header nav a {
+  display: block;
+  padding: .5em 1em;
+  color: #333;
+  text-decoration: none;
 }
 
 a:hover {
   color: #333;
+}
+
+header nav a:hover {
+  background-color: #333;
+  color: #fff;
 }
 
 /* ------------- =header -------------- */
@@ -78,18 +90,6 @@ header nav ul {
 
 header li {
   text-align: left;
-}
-
-header nav a {
-  display: block;
-  padding: .5em 1em;
-  color: #333;
-  text-decoration: none;
-}
-
-header nav a:hover {
-  background-color: #333;
-  color: #fff;
 }
 
 /* ------------- =About-------------- */
@@ -391,11 +391,9 @@ h3 {
   .content {
     display: inline-block;
     text-align: left;
-    margin-top: 0;
     width: 73%;
-    margin-left: 2rem;
     vertical-align: top;
-    margin: 0;
+    margin: 0 0 0 2rem;
   }
 
   .content div {
