--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,7 @@ h3 {
 .btn:hover {
   background-color: #000;
   border-color: #000;
+  color: #fff;
 }
 
 .btn-small {
@@ -368,13 +369,13 @@ h3 {
     display: inline-block;
     text-align: left;
     margin: 0;
-    margin-right: 1em;
-    width: 80px;
-    vertical-align: top;
+    width: 15%;
+    margin-left: .5rem;
   }
 
   .card-img img {
     margin: 0;
+    margin-right: .5rem;
   }
 
   .card h4 {
@@ -435,6 +436,7 @@ h3 {
 
   .content {
     width: 100%;
+    margin: 0 auto;
   }
 
   .content h2 {
